update: home API에서 userId 기반 북마크/좋아요 동적 반영 코드 추가